packages/client-app/src/assets/variables.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900');
@import url('https://fonts.googleapis.com/css?family=JetBrains%20Mono');

:root {
  --scalar-border-width: 1px;
  --scalar-radius: 3px;
  --scalar-radius-lg: 6px;
  --scalar-radius-xl: 8px;

  --scalar-client-header-height: 50px;
  --scalar-sidebar-width: 280px;
  --scalar-toc-width: 280px;

  /* TYPOGRAPHY ------------------------------------ */
  --system-fonts: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  --scalar-font: 'Inter', var(--system-fonts);
  --scalar-font-code: 'JetBrains Mono';

  /** Font sizes for rendered text content (editor styles or static content) */
  --scalar-heading-1: 40px; /* Editor Page heading */
  --scalar-page-description: 24px;
  --scalar-heading-2: 24px; /* Editor section headings */
  --scalar-heading-3: 20px;
  --scalar-heading-4: 16px;
  --scalar-heading-5: 16px;
  --scalar-heading-6: 16px;

  --scalar-paragraph: 16px;
  --scalar-small: 14px;
  --scalar-mini: 13px;
  --scalar-micro: 12px;

  --scalar-bold: 600;
  --scalar-semibold: 500;
  --scalar-regular: 400;

  /* Font sizes for interactive applications (not rendered text content) */
  --scalar-font-size-1: 24px;
  --scalar-font-size-2: 16px;
  --scalar-font-size-3: 14px;
  --scalar-font-size-4: 13px;
  --scalar-font-size-5: 12px;
  --scalar-font-size-6: 11px;
  --scalar-font-size-7: 10px;

  --scalar-line-height-1: 32px;
  --scalar-line-height-2: 24px;
  --scalar-line-height-3: 20px;
  --scalar-line-height-4: 18px;
  --scalar-line-height-5: 16px;
}

@media (max-width: 460px) {
  :root {
    --scalar-font-size-1: 22px;
    --scalar-font-size-2: 14px;
    --scalar-font-size-3: 12px;
  }
}

@media (max-width: 720px) {
  :root {
    --scalar-heading-1: 24px;
    --scalar-page-description: 20px;
  }
}

.light-mode {
  color-scheme: light;
  --scalar-color-1: #2a2f45;
  --scalar-color-2: #757575;
  --scalar-color-3: #a0a0a0;
  --scalar-color-disabled: #b4b1b1;
  --scalar-color-ghost: #a7a7a7;
  --scalar-color-accent: #0099ff;
  --scalar-background-1: #fff;
  --scalar-background-2: #f6f6f6;
  --scalar-background-3: #e7e7e7;
  --scalar-background-4: rgba(0, 0, 0, 0.06);
  --scalar-background-accent: #8ab4f81f;

  --scalar-border-color: rgba(0, 0, 0, 0.1);
  --scalar-scrollbar-color: rgba(0, 0, 0, 0.18);
  --scalar-scrollbar-color-active: rgba(0, 0, 0, 0.36);
  --scalar-lifted-brightness: 1;
  --scalar-backdrop-brightness: 1;

  --scalar-shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.11);
  --scalar-shadow-2: rgba(0, 0, 0, 0.08) 0px 13px 20px 0px,
    rgba(0, 0, 0, 0.08) 0px 3px 8px 0px, #eeeeed 0px 0 0 1px;

  --scalar-button-1: rgb(49 53 56);
  --scalar-button-1-color: #fff;
  --scalar-button-1-hover: rgb(28 31 33);

  --scalar-color-green: #069061;
  --scalar-color-red: #ef0006;
  --scalar-color-yellow: #edbe20;
  --scalar-color-blue: #0082d0;
  --scalar-color-orange: #fb892c;
  --scalar-color-purple: #5203d1;
  --scalar-color-pink: #e192c3;
  --scalar-color-grey: var(--scalar-color-3);

  /* Misc Scalar Branding */
  --scalar-brand: #faf6e9;
}

.dark-mode {
  color-scheme: dark;
  --scalar-color-1: rgba(255, 255, 255, 0.9);
  --scalar-color-2: rgba(255, 255, 255, 0.62);
  --scalar-color-3: rgba(255, 255, 255, 0.44);
  --scalar-color-disabled: rgba(255, 255, 255, 0.34);
  --scalar-color-ghost: rgba(255, 255, 255, 0.26);
  --scalar-color-accent: #8ab4f8;
  --scalar-background-1: #0f0f0f;
  --scalar-background-2: #1a1a1a;
  --scalar-background-3: #272727;
  --scalar-background-4: rgba(255, 255, 255, 0.06);
  --scalar-background-accent: #8ab4f81f;

  --scalar-border-color: rgba(255, 255, 255, 0.1);
  --scalar-scrollbar-color: rgba(255, 255, 255, 0.24);
  --scalar-scrollbar-color-active: rgba(255, 255, 255, 0.48);
  --scalar-lifted-brightness: 1.45;
  --scalar-backdrop-brightness: 0.5;

  --scalar-shadow-1: 0 1px 3px 0 rgb(0, 0, 0, 0.1);
  --scalar-shadow-2: rgba(15, 15, 15, 0.2) 0px 3px 6px,
    rgba(15, 15, 15, 0.4) 0px 9px 24px, 0 0 0 1px rgba(255, 255, 255, 0.1);

  --scalar-button-1: #f6f6f6;
  --scalar-button-1-color: #000;
  --scalar-button-1-hover: #e7e7e7;

  --scalar-color-green: #00b848;
  --scalar-color-red: #fe1d2c;
  --scalar-color-yellow: #fbca25;
  --scalar-color-blue: #76aedf;
  --scalar-color-orange: #dd922f;
  --scalar-color-purple: #b090f8;
  --scalar-color-pink: #f53f53;

  /* Misc Scalar Branding */
  --scalar-brand: #8b7256;
}

/* Aliases & Inferred Variables */
.light-mode,
.dark-mode {
  --scalar-border: var(--scalar-border-width) solid var(--scalar-border-color);
}

html,
body {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow: hidden;

  font-family: var(--scalar-font);
  color: var(--scalar-color-1);
  background-color: var(--scalar-background-1);
}

